--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,11 +82,11 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }} 
 
       - name: Sync DAGs to S3
         run: |
-          aws s3 sync etl/ s3://$BUCKET_NAME/spark_app/
+          aws s3 sync spark/demo.py s3://$BUCKET_NAME/spark_app/
         
