--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,12 +73,15 @@ jobs:
         run: isort .
 
   sync-spark:
-    name: Sync spark script to S3
-    runs-on: ubuntu-latest
-    needs: [lint-pyspark]
-    env:
-      BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Sync spark script to S3
+        runs-on: ubuntu-latest
+        needs: [lint-pyspark]
+        env:
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
+        steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -90,3 +93,4 @@ jobs:
         run: |
           aws s3 sync spark/demo.py s3://$BUCKET_NAME/spark_app/
         
+
