--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,8 +89,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }} 
 
-      - name: Sync DAGs to S3
+      - name: Sync Spark Application to S3
         run: |
+          ls
+          echo $BUCKET_NAME
           aws s3 sync spark/demo.py s3://$BUCKET_NAME/spark_app/
         
 
