--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,13 +23,13 @@ jobs:
 
       - name: Install Python linters
         run: |
-          pip install isort
+          pip install isort flake8
 
       # - name: Run flake8
-      #   run: flake8 .
+      #   run: flake8 ./spark/input_data/data_generator.py
 
       - name: Run isort
-        run: isort .
+        run: isort ./spark/input_data/data_generator.py
 
   sync-spark:
     name: Sync spark script to S3
