--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+awswrangler==3.12.0
+boto3==1.38.29
+botocore==1.38.29
 dotenv==0.9.9
 Faker==37.3.0
 numpy==2.2.6
 pandas==2.2.3
+pyarrow==20.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-pytz==2025.2
-six==1.17.0
-tzdata==2025.2
+requests==2.32.3
+s3transfer==0.13.0
