Revert "Merge pull request #1 from AyoDennis/test_branch"
This reverts commit e92187addd13f9cd199e6f8ddbab41ce8ad4c21b, reversing
changes made to 449e25a5f746b66a29d55fbbd782e71c1df1ae32.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,8 +25,8 @@ jobs:
         run: |
           pip install isort flake8
 
-      - name: Run flake8
-        run: flake8 ./spark/input_data/data_generator.py
+      # - name: Run flake8
+      #   run: flake8 ./spark/input_data/data_generator.py
 
       - name: Run isort
         run: isort ./spark/input_data/data_generator.py
@@ -49,5 +49,6 @@ jobs:
       - name: Sync Spark Application to S3
         run: |
           aws s3 sync ./spark/input_data s3://${{ secrets.BUCKET_NAME }}/spark_app/ --exclude "*" --include "pyspark_app.py"
+          aws s3 sync ./spark/data_source s3://${{ secrets.BUCKET_NAME }}/data_source/ 
         
 
