--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -48,7 +48,9 @@ jobs:
 
       - name: Sync Spark Application to S3
         run: |
-          aws s3 sync ./spark/input_data s3://${{ secrets.BUCKET_NAME }}/spark_app/ --exclude "*" --include "pyspark_app.py"
+          aws s3 sync ./spark/input_data s3://${{ secrets.BUCKET_NAME }}/spark_app/ --exclude "*" --include "pyspark_app.py" "data_generator.py"
+          aws s3 cp ./kestra s3://${{ secrets.BUCKET_NAME }}/spark_app/ 
+
 
         
 
